@@ -1,3 +1,8 @@
+2005-08-03  Madhan Raj M  <madhanrm@gnome.org>
+
+	* src/sj-play.c:
+	Disable Reread while playing.
+
 2005-08-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/Makefile.am:
